Fix contrast on heading

--- a/src/scss/components/_posts-intro.scss
+++ b/src/scss/components/_posts-intro.scss
@@ -9,7 +9,7 @@
   }
 
   &__heading {
-    color: #fafafa;
+    color: var(--color-dark);
     letter-spacing: 0.6px;
     align-self: flex-start;
   }
